--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,14 @@ h3{
 	padding-right: 20px;
 	color:#161616;
 }
+
+.card {
+	margin: 0 auto;
+	float: none;
+	margin-bottom: 10px;
+}
+
+.card:hover {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.59);
+}
+
