--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,12 @@ h3{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.59);
 }
 
+.footer{
+	background: #FF5F6D;
+	padding-top: 40px;
+	padding-bottom:  40px;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin: 0;
+	color:#fff;
+}
