--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,12 @@ h3{
 	margin: 0;
 	color:#fff;
 }
+
+.features {
+
+	padding-top: 50px;
+	padding-bottom:  50px;
+	padding-left: 20px;
+	padding-right: 20px;
+	color:#161616;
+}
