--- a/css/style.css
+++ b/css/style.css
@@ -1,103 +1,100 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 
-html,body{
-	margin:0;
-	font-family: 'Muli', sans-serif;
-	position: relative;
-	height: 100%;
+html,
+body {
+  margin: 0;
+  font-family: 'Muli', sans-serif;
+  position: relative;
+  height: 100%;
 }
 
 .headerbg {
-	background-image: url('../img/bg.png');
-	background-size: cover;
-	color:#FFF;
-	padding: 5%;
-	height: 100%;
+  background-image: url('../img/bg.png');
+  background-size: cover;
+  color: #fff;
+  padding: 5%;
+  height: 100%;
 }
 
 .logo {
-	width: 40%;
-	margin-top:30%;
+  width: 40%;
+  margin-top: 30%;
 }
 
-.imgright{
-	width: 60%;
+.imgright {
+  width: 60%;
 }
 
-.carousel-inner img
-{
-	margin: auto;
+.carousel-inner img {
+  margin: auto;
 }
 
-h3{
-	color: #633991;
-	font-size: 55px;
-	font-weight: 500;
+h3 {
+  color: #633991;
+  font-size: 55px;
+  font-weight: 500;
 }
 
 .gallery {
-	padding-top: 50px;
-	padding-bottom:  50px;
-	padding-left: 20px;
-	padding-right: 20px;
-	color:#161616;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #161616;
 }
 
 .card {
-	margin: 0 auto;
-	float: none;
-	margin-bottom: 10px;
+  margin: 0 auto;
+  float: none;
+  margin-bottom: 10px;
 }
 
 .card:hover {
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.59);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.59);
 }
 
-.footer{
-	background: #FF5F6D;
-	padding-top: 40px;
-	padding-bottom:  40px;
-	padding-left: 20px;
-	padding-right: 20px;
-	margin: 0;
-	color:#fff;
+.footer {
+  background: rgb(15, 111, 128);
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0;
+  color: #fff;
 }
 
 .features {
-
-	padding-top: 50px;
-	padding-bottom:  50px;
-	padding-left: 20px;
-	padding-right: 20px;
-	color:#161616;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #161616;
 }
 
 .footer button {
-	background: #fff;
-	color: #fc3232;
-	height: 60px;
-	padding: 10px;
-	width:80%;
-	border-radius: 80px 80px 80px 80px;
-	-moz-border-radius: 80px 80px 80px 80px;
-	-webkit-border-radius: 80px 80px 80px 80px;
-	margin-top:5%;
-	border:none;
+  background: #fff;
+  color: #fc3232;
+  height: 60px;
+  padding: 10px;
+  width: 80%;
+  border-radius: 80px 80px 80px 80px;
+  -moz-border-radius: 80px 80px 80px 80px;
+  -webkit-border-radius: 80px 80px 80px 80px;
+  margin-top: 5%;
+  border: none;
 }
 
 .footer button:hover {
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
-	background: #000;
-	color: #fff;
-
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+  background: #000;
+  color: #fff;
 }
 
 .footerbrand {
-
-	background: #181818;
-	padding: 40px;
+  background: #181818;
+  padding: 40px;
 }
 
 .logofooter {
-	width: 100%;
+  width: 100%;
 }
